--- a/style.css
+++ b/style.css
@@ -1,86 +1,102 @@
 body {
-	font-family: Verdana;
-	background: black;
-	color: white;
+  font-family: Verdana;
+  background: black;
+  color: white;
 }
 
 .container {
-	width: 100%;
-	height: 100%;
+  width: 100%;
+  height: 100%;
 }
 
 .header {
-	margin: 2rem;
-	font-size: 2rem;
+  margin: 2rem;
+  font-size: 2rem;
 }
 
 .content {
-	width: 100%;
-	height: auto;
-	overflow-y: auto;
-	display: flex;
-	flex-wrap: wrap;
+  width: 100%;
+  height: auto;
+  overflow-y: auto;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.button-container {
+  width: 360px;
+  height: 47px;
+  z-index: 7;
+  background: rgba(16, 16, 16, 1);
+  border: 2px white solid;
+  display: flex;
+  flex-direction: column;
+  padding: 1rem;
+}
+
+input {
+  color: white;
+  padding-bottom: 0.5rem;
 }
 
 #root {
-	display: flex;
-	flex-direction: row;
-	flex-wrap: wrap;
-	justify-content: space-evenly;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
 }
 
 .item {
-	margin: 1rem;
-	border: 1px solid #282828;
-	padding: 0.5rem;
-	width: 22%;
+  margin: 1rem;
+  border: 1px solid #282828;
+  padding: 0.5rem;
+  width: 22%;
 }
 
 .item-name {
-	font-size: 1.2rem;
-	margin-bottom: 0.5rem;
-	text-align: center;
-	font-weight: bold;
+  font-size: 1.2rem;
+  margin-bottom: 0.5rem;
+  text-align: center;
+  font-weight: bold;
 }
 
 .stat {
-	font-size: 1rem;
-	margin-bottom: 0.2rem;
-	color: #4169E1;
-	text-align: center;
+  font-size: 1rem;
+  margin-bottom: 0.2rem;
+  color: #4169e1;
+  text-align: center;
 }
 
 .eth {
-	font-size: 1rem;
-	margin-bottom: 0.2rem;
-	color: gray;
-	text-align: center;
+  font-size: 1rem;
+  margin-bottom: 0.2rem;
+  color: gray;
+  text-align: center;
 }
 
 #RUNE {
-	color: #FFAE00;
+  color: #ffae00;
 }
 
 #NORMAL {
-	color: white;
+  color: white;
 }
 
 #MAGIC {
-	color: #4169E1;
+  color: #4169e1;
 }
 
 #RARE {
-	color: yellow;
+  color: yellow;
 }
 
 #UNIQUE {
-	color: #a59263;
+  color: #a59263;
 }
 
 #SET {
-	color: lime;
+  color: lime;
 }
 
 #ETHEREAL {
-	color: gray;
+  color: gray;
 }
